feat: Add user cinema details, booking payment flow, new backend entities, and related frontend dependencies.